# sii-decode-rs

./: .gitignore  .prettierrc  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  HACKING.md  LICENSE  README.md  compare.sh
.github/: FUNDING.yml
.github/workflows/: rust-wasm.yml  rust.yml  web-deploy.yml  web.yml
examples/: achievement_progress.rs  delivery_log.rs
src/: bsii_decode.rs  bsii_file.rs  bsii_output.rs  bsii_parse.rs  file_type.rs  lib.rs  main.rs  save_data.rs  scsc_decrypt.rs  scsc_file.rs  scsc_parse.rs  wasm.rs
src/ets2/: achievements.rs  analysis.rs  mod.rs  save.rs
tests/: wasm.rs
web/: README.md  index.html  package.json  vite.config.ts
web/src/: App.css  App.tsx  decode.worker.ts  decodeWorker.ts  index.css
web/tests/: App.test.jsx
xtask/src/: main.rs
