[package]
name = "sii-decrypt-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "sii_decrypt_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sii-decrypt"
path = "src/main.rs"

[features]
default = []
wasm = ["dep:wasm-bindgen"]

[dependencies]
nom = "7"
aes = "0.8"
cbc = "0.1"
flate2 = "1.0"
log = "0.4"
simple_logger = { version = "5", default-features = false, features = ["stderr"] }
wasm-bindgen = { version = "0.2", optional = true }
