[package]
name = "sii-decode-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Rust library for decoding SII files used in Euro Truck Simulator 2 and American Truck Simulator."
repository = "https://github.com/fangyi-zhou/sii-decode-rs"

[lib]
name = "sii_decode"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sii-decode"
path = "src/main.rs"

[features]
default = []
wasm = ["dep:wasm-bindgen"]

[dependencies]
nom = "7"
aes = "0.8"
cbc = "0.1"
flate2 = "1.0"
log = "0.4"
simple_logger = { version = "5", default-features = false, features = ["stderr"] }
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
